# osmnxr

./: .Rbuildignore  .gitignore  404.html  CRAN-SUBMISSION  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE-text.md  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  authors.html  authors.md  build_site.R  cran-comments.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
R/: download.R  example.R  extendr-wrappers.R  features.R  geocode.R  interop.R  io.R  isochrone.R  metrics.R  osm_graph.R  osmnxr-package.R  overpass.R  routing.R  settings.R  simplify.R  speeds.R  utils.R  zzz.R
articles/: accessibility.html  accessibility.md  features-and-pois.html  features-and-pois.md  figure-ground.html  figure-ground.md  getting-started.html  getting-started.md  index.html  index.md  interoperability.html  interoperability.md  routing-and-isochrones.html  routing-and-isochrones.md  street-orientation.html  street-orientation.md  urban-metrics.html  urban-metrics.md
inst/: AUTHORS  WORDLIST
man/: example_osm_graph.Rd  is_osm_graph.Rd  new_osm_graph.Rd  osmnxr-package.Rd  ox_add_edge_speeds.Rd  ox_add_edge_travel_times.Rd  ox_as_dodgr.Rd  ox_as_sf.Rd  ox_as_sfnetwork.Rd  ox_as_tidygraph.Rd  ox_basic_stats.Rd  ox_bearings.Rd  ox_centrality.Rd  ox_circuity.Rd  ox_clear_cache.Rd  ox_consolidate_intersections.Rd  ox_distance_matrix.Rd  ox_distances.Rd  ox_example.Rd  ox_features_from_bbox.Rd  (+33 more)
src/rust/: Cargo.toml  document.rs  vendor.tar.xz
src/rust/src/: centrality.rs  graph.rs  lib.rs  metrics.rs  routing.rs  simplify.rs
(+141 files in other folders)
