[package]
name = 'osmnxr'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'rlib', 'staticlib' ]
name = 'osmnxr'

[[bin]]
name = 'document'
path = 'document.rs'

[dependencies]
extendr-api = '0.9'

[profile.release]
lto = true
codegen-units = 1
opt-level = 2
strip = true
